--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Understanding Ego - Everybody Has One</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">34 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Jim Simons' lessons from the Medallion Fund</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Strategy Factory: Real-Time Results & Walk-Forward Testing #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Jim Simons' lessons from the Medallion Fund</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5763,7 +5763,7 @@
                         <div class="video-info">
                             <h3>Strategy Factory: Real-Time Results & Walk-Forward Testing #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Understanding Ego - Everybody Has One</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">34 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
