--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Fly high puffle 🕊️</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Some unique intimidation tactics here ￼</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Hope they didn’t see that</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>I bought all of it</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Do all cheaters think the same?</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1091,7 +1091,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>Fly high puffle 🕊️</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>Some unique intimidation tactics here ￼</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>Hope they didn’t see that</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10272,7 +10272,7 @@
                         <div class="video-info">
                             <h3>I bought all of it</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10283,7 +10283,7 @@
                         <div class="video-info">
                             <h3>Do all cheaters think the same?</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10514,7 +10514,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
