--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Consciousness & the Nature of Reality | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>When Plants Begin to Speak…| Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Why The Best Trading Strategy Doesn't Exist</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>Bruce Lee’s Secret Technique | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -904,7 +904,7 @@
                     <div class="video-info">
                         <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Why The Best Trading Strategy Doesn't Exist</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Consciousness & the Nature of Reality | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>When Plants Begin to Speak…| Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7971,7 +7971,7 @@
                         <div class="video-info">
                             <h3>Bruce Lee’s Secret Technique | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9424,7 +9424,7 @@
                         <div class="video-info">
                             <h3>Crispy Pizza 🍕 #pizza #food #pizzalover #pizza #pizzalover #streetfood #cooking</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
